-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.0
-
None
-
ba40fddd2c75cf0791bbe31015f9ecd250639123 (qt/qtdeclarative/dev)
In a build with no opengl:
g++ -c -include .pch/Qt6Quick -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -Wno-format-overflow -Wsuggest-override -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I. -I../../include -I../../include/QtQuick -I../../include/QtQuick/6.0.0 -I../../include/QtQuick/6.0.0/QtQuick -I.tracegen -I../../include/QtQmlModels/6.0.0 -I../../include/QtQmlModels/6.0.0/QtQmlModels -I../../include/QtQml/6.0.0 -I../../include/QtQml/6.0.0/QtQml -I../../include/QtQmlModels -I../../include/QtQml -I/home/qt/work/install/include/QtGui/6.0.0 -I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qsgdefaultglyphnode_p.o scenegraph/qsgdefaultglyphnode_p.cpp scenegraph/qsgrhisupport.cpp: In member function ‘QRhi* QSGRhiSupport::createRhi(QQuickWindow*, QOffscreenSurface*)’: scenegraph/qsgrhisupport.cpp:571:40: error: unused variable ‘customDevD’ [-Werror=unused-variable]
- is required for
-
QTQAINFRA-3407 Bring back no-opengl verification in the CI
-
- Closed
-